I changed the style.css file's content.

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -1,14 +1,14 @@
+#root {
+    background-color: #ffeedf;
+    text-align: center;
+    display: flex;
+    position: relative;
+    justify-content: center;
+}
+
 .center-me {
     margin: 0 auto;
 }
-
-    body {
-        background-color: ffeedf;
-        text-align: center;
-        display: flex;
-        position: relative;
-        justify-content: center;
-    }
 
     button {
         background-color: #1c5a4e;
