I changed the style.css file's content.

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -1,8 +1,41 @@
+* {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    outline: none;
+    box-sizing: border-box;
+    background: transparent;
+    font-family: inherit;
+  }
+  a{
+    text-decoration: none;
+  }
+  a img {
+    border: none;
+  }
+  
+  button,
+  a {
+    cursor: pointer;
+    color: inherit;
+  }
+  
+  textarea {
+    resize: none;
+  }
+  
+  button,
+  textarea,
+  select {
+    appearance: none !important;
+    border-radius: 0;
+  }
+
 #root {
     background-color: #ffeedf;
     display: flex;
     justify-content: center;
-    min-height: 100%;
+    min-height: 100vh;
     align-items: center;
 }
 
@@ -17,4 +50,5 @@
         line-height: 0;
         font-family: 'Montserrat', sans-serif;
         border: 0px;
+        padding-bottom: 20px;
     }
